- NEW: "this" symbol for configuration mappings (IVY-183) (thanks to Karl Baum)
- NEW: always update artifacts when revision matches a regex pattern (IVY-189) (thanks to Johan Stuyts)
- NEW: provide Ant task for generating report about artifacts depended upon (IVY-194) (thanks to Johan Stuyts)

- IMPROVE: comments now aren't lost when delivering ivy files (IVY-226) (thanks to Maarten Coene)
- IMPROVE: add sort of 'fallback'-mapping to the defaultconfmapping attribute (IVY-215) (thanks to Maarten Coene)
- IMPROVE: use global properties in the recursive delivery (IVY-222) (with the contribution of Roshan Punnoose)
- IMPROVE: ivy standalone now return error status (IVY-152)
- IMPROVE: performances improved (IVY-187) (thanks to Karl Baum)
- IMPROVE: change default cache artifact pattern to handle missing extension (IVY-196) (thanks to Johan Stuyts)
- IMPROVE: log messages do not display most specfic resolver name (IVY-170)

- FIX: cachepath task should preserve the order of the dependencies (IVY-225) (thanks to Maarten Coene)
- FIX: specifying a defaultconfmapping adds dependencies of each unlisted configuration (IVY-214) (thanks to Maarten Coene)
- FIX: Ivy fails when downloading from a server that supports NTLM authentication (IVY-213) (thanks to Damon Rand)
- FIX: problem with cache and returnFirst (IVY-207)
- FIX: modules splitted across a chain are not handled correctly (IVY-206)
- FIX: Delivered Ivy files with incomplete last line. (IVY-125) (thanks to Matthias Kilian)

   version 1.3.1 - 2006-03-30
===============================
- FIX: retrieval of multiple artifacts in different configurations does not work as expected (IVY-188)
- FIX: configuration http url include doesn't work with commons http client (IVY-203)
- FIX: problem with conflict resolution in transitive dependencies (IVY-199)
- FIX: pb with force when it comes after a conflict which has already been solved (IVY-193)