@@ -37,6 +37,36 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Iterator
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -203,6 +233,14 @@ name|String
 name|_xslext
 init|=
 literal|"html"
+decl_stmt|;
+specifier|private
+name|List
+name|_params
+init|=
+operator|new
+name|ArrayList
+argument_list|()
 decl_stmt|;
 specifier|public
 name|File
@@ -1104,6 +1142,67 @@ argument_list|(
 name|_xslext
 argument_list|)
 expr_stmt|;
+comment|// add the provided XSLT parameters
+for|for
+control|(
+name|Iterator
+name|it
+init|=
+name|_params
+operator|.
+name|iterator
+argument_list|()
+init|;
+name|it
+operator|.
+name|hasNext
+argument_list|()
+condition|;
+control|)
+block|{
+name|param
+operator|=
+operator|(
+name|XSLTProcess
+operator|.
+name|Param
+operator|)
+name|it
+operator|.
+name|next
+argument_list|()
+expr_stmt|;
+name|XSLTProcess
+operator|.
+name|Param
+name|realParam
+init|=
+name|xslt
+operator|.
+name|createParam
+argument_list|()
+decl_stmt|;
+name|realParam
+operator|.
+name|setName
+argument_list|(
+name|param
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|realParam
+operator|.
+name|setExpression
+argument_list|(
+name|param
+operator|.
+name|getExpression
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 name|xslt
 operator|.
 name|execute
@@ -1496,6 +1595,35 @@ name|_xslext
 operator|=
 name|xslext
 expr_stmt|;
+block|}
+specifier|public
+name|XSLTProcess
+operator|.
+name|Param
+name|createParam
+parameter_list|()
+block|{
+name|XSLTProcess
+operator|.
+name|Param
+name|result
+init|=
+operator|new
+name|XSLTProcess
+operator|.
+name|Param
+argument_list|()
+decl_stmt|;
+name|_params
+operator|.
+name|add
+argument_list|(
+name|result
+argument_list|)
+expr_stmt|;
+return|return
+name|result
+return|;
 block|}
 block|}
 end_class
