@@ -10,6 +10,7 @@
 - NEW: always update artifacts when revision matches a regex pattern (IVY-189) (thanks to Johan Stuyts)
 - NEW: provide Ant task for generating report about artifacts depended upon (IVY-194) (thanks to Johan Stuyts)
 
+- IMPROVE: add support for xslt parameters in the report task (IVY-227) (thanks to Maarten Coene)
 - IMPROVE: comments now aren't lost when delivering ivy files (IVY-226) (thanks to Maarten Coene)
 - IMPROVE: add sort of 'fallback'-mapping to the defaultconfmapping attribute (IVY-215) (thanks to Maarten Coene)
 - IMPROVE: use global properties in the recursive delivery (IVY-222) (with the contribution of Roshan Punnoose)
